--- a/EventDelegatExamples/MVPCalculate/MainWindow.xaml
+++ b/EventDelegatExamples/MVPCalculate/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MVPCalculate.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Калькулятор MVP" Height="198" Width="327">
+        Title="Calculator" Height="198" Width="327">
     <Grid Height="148" Width="291">
         <Button Content="Close" Height="23" HorizontalAlignment="Left" Margin="236,98,0,0" Name="Close_button" VerticalAlignment="Top" Width="44" Click="CloseButtonClick" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="85,13,0,0" Name="Operand1_textBox" VerticalAlignment="Top" Width="120" />
